First draft of the abstract

--- a/Report/EspinozaReport.tex
+++ b/Report/EspinozaReport.tex
@@ -31,9 +31,8 @@
 % ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 % ------------------------------------------------------------------------------------------------------------
 	\begin{abstract}
-		Some text goes here
+		In the last few decades the urban population has increased dramatically, but the rapid rate of urbanization has caused a strain on the available resources, leaving many to live in deprived, or impoverished areas. To address these socio-demographic issues policymakers typically rely on traditional survey-based data, like the census, but such data can quickly become outdated. Earth observations are the proposed solution to the gaps left by traditional data. Artificial intelligence and deep learning algorithms are being used to detect changes on the earth's surface, such as detecting new urban areas. New research has focused on classifying elements of the city itself, monitoring waste disposal sites and traffic to have a better understanding of the deprived areas and their needs. This project will discuss the current uses of remote sensing for socio-demographic applications and attempt to use real data to extract urban characteristics of a city.
 		
-
 	\end{abstract}
 
 % ------------------------------------------------------------------------------------------------------------
@@ -62,6 +61,14 @@
 %
 %
 %	\section{Conclusion}
+
+
+% ------------------------------------------------------------------------------------------------------------
+% ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
+% ------------------------------------------------------------------------------------------------------------
+% USEFUL LINKS: 
+% Worldview-3 dataset (mentioned in a few papers):
+%	https://earth.esa.int/eogateway/catalog/worldview-3-full-archive-and-tasking
 
 
 	\nocite{*}
