Adding Abstract that was submitted

--- a/Report/EspinozaReport.tex
+++ b/Report/EspinozaReport.tex
@@ -16,7 +16,7 @@
 
 \begin{document}
 	
-	\title{TITLE GOES HERE...}
+	\title{Remote Sensing for Socio-Demographic Applications}
 
 	\author{\IEEEauthorblockN{1\textsuperscript{st} Yvette Espinoza}
 		\IEEEauthorblockA{\textit{Software Engineer} \\
@@ -31,8 +31,12 @@
 % ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 % ------------------------------------------------------------------------------------------------------------
 	\begin{abstract}
-		In the last few decades the urban population has increased dramatically, but the rapid rate of urbanization has caused a strain on the available resources, leaving many to live in deprived, or impoverished areas. To address these socio-demographic issues policymakers typically rely on traditional survey-based data, like the census, but such data can quickly become outdated. Earth observations are the proposed solution to the gaps left by traditional data. Artificial intelligence and deep learning algorithms are being used to detect changes on the earth's surface, such as detecting new urban areas. New research has focused on classifying elements of the city itself, monitoring waste disposal sites and traffic to have a better understanding of the deprived areas and their needs. This project will discuss the current uses of remote sensing for socio-demographic applications and attempt to use real data to extract urban characteristics of a city.
-		
+		The urban population has increased dramatically in the last few decades, but the rapid rate of urbanization has caused a strain on the available resources, leaving many to live in deprived, or impoverished areas.
+		To address these socio-demographic issues policymakers typically rely on traditional survey-based data, like the census, but such data is complex to acquire and can quickly become outdated. Earth observations are the proposed solution to the gaps left by traditional data.
+		Artificial intelligence and deep learning algorithms are being used to detect changes on the earth's surface, such as detecting new urban areas.
+		New research has focused on classifying elements of the city itself, monitoring waste disposal sites and traffic to have a better understanding of the deprived areas and their needs.
+		This project will analyze urban characteristics, what makes an area ‘deprived’, and discuss the uses of remote sensing in socio-demographic applications while attempting to use real data to extract the characteristics of a city.
+
 	\end{abstract}
 
 % ------------------------------------------------------------------------------------------------------------
