Adding explanation on poverty and need for remote sensing

--- a/Report/EspinozaReport.tex
+++ b/Report/EspinozaReport.tex
@@ -42,12 +42,39 @@
 % ------------------------------------------------------------------------------------------------------------
 % ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 % ------------------------------------------------------------------------------------------------------------
-%	\section{Literature Review}
-%		
-%		
-%
-%	\subsection{Sub Section}
+	\section{Literature Review}
+		It is estimated that half of the worlds population is currently living in cities, with that number expected to rise to 60\% by 2030, but the rapid rate of urbanization has not resulted in an equal increase in public amenities or affordable housing \cite{UN_Sustanability_Report}.
+		The lack of affordable housing has led to the creation of informal settlements, commonly referred to as 'slums', or deprived urban areas (DUA).
+		These areas of concentrated poverty often lack public amenities such as access to clean water or waste disposal, and are known to have hazardous effects on the inhabitants health \cite{Georgano_Stefanos_2021}.
+		
+		Poverty reduction, listed in the United Nation's Sustainable Development Goals, is a priority worldwide, though policies enacted and definition of poverty itself vary between countries.
+		Some common definitions include the current financial status of residents, or the value of a household's assets, but such methods alone do not paint a clear picture of the situation, since low income households do not necessarily belong to a deprived area \cite{Merodio_Paloma_2021}. 
+		Since research has found poverty is related to population growth, one reduction approach focuses on addressing deprived urban areas, thus improving living conditions and reducing the risk of natural hazards \cite{Lin_Li_2021}.
+		
+		The traditional method for mapping deprived areas rely on field surveys, such as the census, however these methods are costly and have a long period between collections.
+		Since settlements are constantly changing, the data quickly becomes outdated and unable to provide feedback on whether any policies are effective \cite{Williams_Trecia_2020}.
+		The COVID-19 pandemic brought more attention to this problem since many field surveys were delayed during a time when data was needed to divert resources to the most needed communities.
+		One solution to fill the data gaps left by the traditional methods is the use of remote sensing.
+		
+%		- Describe urban characteristics --> problems with gentrifications and urbanization causing poverty
+%		- comment on UN report that majoirty of poverty still in rural areas, but urbanization is also increasing poverty. 
+% - add motivation on why such research is important --> to fill data gaps needed for effective policy
 
+	\subsection{Remote Sensing}
+		There are many ways in which remote sensing can be used to get a better understanding of an area.
+		At a high level 
+
+	\subsection{Optical Systems}
+	
+	\subsection{Radar Systems}
+		
+	\subsection{Earth Observations powerful addon}
+		% think of a better seciton title, intend to cover the following:
+		% - current uses of remote sensing (limitations of just earth observations, which miss local info from agencies and GIS(?) systems)
+		% 
+
+	\subsection{Change Based Detection Algorithms}
+		% Talk about the article on change detection algorithms, which are very important for socio-demographic applications --> eventually expand on what the project will attempt to do..
 % ------------------------------------------------------------------------------------------------------------
 % ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ 
 % ------------------------------------------------------------------------------------------------------------
