adding discussion on optical and radar systems

--- a/Report/EspinozaReport.tex
+++ b/Report/EspinozaReport.tex
@@ -56,22 +56,19 @@
 		The COVID-19 pandemic brought more attention to this problem since many field surveys were delayed during a time when data was needed to divert resources to the most needed communities.
 		One solution to fill the data gaps left by the traditional methods is the use of remote sensing.
 		
-%		- Describe urban characteristics --> problems with gentrifications and urbanization causing poverty
-%		- comment on UN report that majoirty of poverty still in rural areas, but urbanization is also increasing poverty. 
-% - add motivation on why such research is important --> to fill data gaps needed for effective policy
-
 	\subsection{Remote Sensing}
 		There are many ways in which remote sensing can be used to get a better understanding of an area.
-		At a high level 
-
-	\subsection{Optical Systems}
-	
-	\subsection{Radar Systems}
+		At a high level satelite images can be used to train deep learning models that classify areas as urban or rural \cite{Guo_Jinxin_2019}, but research has also focused on smaller features, such as waste piles and vehicles.
+		Optical systems are more widely used for collecting satelite images, but radar systems are also used.
 		
-	\subsection{Earth Observations powerful addon}
-		% think of a better seciton title, intend to cover the following:
-		% - current uses of remote sensing (limitations of just earth observations, which miss local info from agencies and GIS(?) systems)
-		% 
+		Radar systems are desirable because they are not affected by weather conditions as optical images are. The X band of Synthetic Aperture Radars (SAR), which has frequencies in the range of 8-12 GHz, produces high resolution images that can be analyzed for feature extraction \cite{Wurm_2017}.
+		% YVETTE -  maybe add more on SAR here...
+		
+		Despite the need for illumination, optical systems are more widely used because most of the urban characteristics analyzed are physical aspects that do not require the more detailed information SAR provides. 
+		
+
+		
+		
 
 	\subsection{Change Based Detection Algorithms}
 		% Talk about the article on change detection algorithms, which are very important for socio-demographic applications --> eventually expand on what the project will attempt to do..
