--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -55,4 +55,52 @@
 	URL = {https://www.mdpi.com/2072-4292/12/10/1688},
 	ISSN = {2072-4292},
 	DOI = {10.3390/rs12101688}
+},
+@ARTICLE{Williams_Trecia_2020,
+	author={Williams, Trecia Kay-Ann and Wei, Tao and Zhu, Xiaolin},
+	journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing}, 
+	title={Mapping Urban Slum Settlements Using Very High-Resolution Imagery and Land Boundary Data}, 
+	year={2020},
+	volume={13},
+	number={},
+	pages={166-177},
+	doi={10.1109/JSTARS.2019.2954407}
+},
+@article{Thomson_Dana_2019,
+	author = {Thomson, Dana and Linard, Catherine and Vanhuysse, Sabine and Steele, Jessica and Shimoni, Michal and Siri, Jose and Caiaffa, Waleska and Rosenberg, Megumi and Wolff, Eléonore and Grippa, Tais and Georganos, Stefanos and Elsey, Helen},
+	year = {2019},
+	month = {06},
+	pages = {},
+	title = {Extending Data for Urban Health Decision-Making: a Menu of New and Potential Neighborhood-Level Health Determinants Datasets in LMICs},
+	volume = {96},
+	journal = {Journal of Urban Health},
+	doi = {10.1007/s11524-019-00363-3}
+}
+@misc{UN_Sustanability_Report,
+	author = {UN. Department of Economic and Social Affairs},
+	year = {2019},
+	title = {The Sustainable development goals report 2019},
+	URL = {https://digitallibrary.un.org/record/3812145},
+},
+@article{Wurm_2017,
+	title = {Slum mapping in polarimetric SAR data using spatial features},
+	journal = {Remote Sensing of Environment},
+	volume = {194},
+	pages = {190-204},
+	year = {2017},
+	issn = {0034-4257},
+	doi = {https://doi.org/10.1016/j.rse.2017.03.030},
+	url = {https://www.sciencedirect.com/science/article/pii/S0034425717301335},
+	author = {Michael Wurm and Hannes Taubenböck and Matthias Weigand and Andreas Schmitt},
+	keywords = {Slums, Informal settlements, polSAR, Classification, Random forests, Kennaugh elements, Texture, Morphological profiles}
+},
+@ARTICLE{Kuffer_2016,
+	author={Kuffer, Monika and Pfeffer, Karin and Sliuzas, Richard and Baud, Isa},
+	journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing}, 
+	title={Extraction of Slum Areas From VHR Imagery Using GLCM Variance}, 
+	year={2016},
+	volume={9},
+	number={5},
+	pages={1830-1840},
+	doi={10.1109/JSTARS.2016.2538563}
 }
