--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -103,4 +103,41 @@
 	number={5},
 	pages={1830-1840},
 	doi={10.1109/JSTARS.2016.2538563}
+},
+@INPROCEEDINGS{Kuffer_2015,
+	author={Kuffer, Monika and Sliuzas, Richard and Pfeffer, Karin and Baud, Isa},
+	booktitle={2015 Joint Urban Remote Sensing Event (JURSE)}, 
+	title={The utility of the co-occurrence matrix to extract slum areas from VHR imagery}, 
+	year={2015},
+	volume={},
+	number={},
+	pages={1-4},
+	doi={10.1109/JURSE.2015.7120514}
+},
+@Article{Huang_2014,
+	AUTHOR = {Huang, Xin and Liu, Xiaobo and Zhang, Liangpei},
+	TITLE = {A Multichannel Gray Level Co-Occurrence Matrix for Multi/Hyperspectral Image Texture Representation},
+	JOURNAL = {Remote Sensing},
+	VOLUME = {6},
+	YEAR = {2014},
+	NUMBER = {9},
+	PAGES = {8424--8445},
+	URL = {https://www.mdpi.com/2072-4292/6/9/8424},
+	ISSN = {2072-4292},
+	DOI = {10.3390/rs6098424}
+},
+@INPROCEEDINGS{Vanhuysse_2021,
+	author={Vanhuysse, Sabine and Georganos, Stefanos and Kuffer, Monika and Grippa, Taïs and Lennert, Moritz and Wolff, Eléonore},
+	booktitle={2021 IEEE International Geoscience and Remote Sensing Symposium IGARSS}, 
+	title={Gridded Urban Deprivation Probability from Open Optical Imagery and Dual-Pol Sar Data}, 
+	year={2021},
+	volume={},
+	number={},
+	pages={2110-2113},
+	doi={10.1109/IGARSS47720.2021.9554231}
+},
+@inproceedings{Zheng_2004,
+	title={THE TEXTURAL ANALYSIS AND INTERPRETATION OF HIGH RESOLUTION AIRSAR IMAGES},
+	author={Zhao Zheng and Zhang JiXian and Huang Guo-man},
+	year={2004}
 }
