--- a/Report/refs.bib
+++ b/Report/refs.bib
@@ -140,4 +140,20 @@
 	title={THE TEXTURAL ANALYSIS AND INTERPRETATION OF HIGH RESOLUTION AIRSAR IMAGES},
 	author={Zhao Zheng and Zhang JiXian and Huang Guo-man},
 	year={2004}
+},
+@Article{Hu_2018,
+	AUTHOR = {Hu, Jingliang and Ghamisi, Pedram and Zhu, Xiao Xiang},
+	TITLE = {Feature Extraction and Selection of Sentinel-1 Dual-Pol Data for Global-Scale Local Climate Zone Classification},
+	JOURNAL = {ISPRS International Journal of Geo-Information},
+	VOLUME = {7},
+	YEAR = {2018},
+	NUMBER = {9},
+	ARTICLE-NUMBER = {379},
+	URL = {https://www.mdpi.com/2220-9964/7/9/379},
+	ISSN = {2220-9964},
+	DOI = {10.3390/ijgi7090379}
+},
+@misc{acq_modes,
+	title = {Acquisition Modes},
+	url = {https://sentinels.copernicus.eu/web/sentinel/user-guides/sentinel-1-sar/acquisition-modes}
 }
